--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.5
+  flutter_spinkit: ^5.2.0
+
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+
   path_provider: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -81,10 +86,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-   - family: Domine
-     fonts:
-       - asset: lib/fonts/Domine/static/Domine-Regular.ttf
-       - asset: lib/fonts/Domine/static/Domine-Medium.ttf
+    - family: Domine
+      fonts:
+        - asset: lib/fonts/Domine/static/Domine-Regular.ttf
+        - asset: lib/fonts/Domine/static/Domine-Medium.ttf
 
   #   - family: Trajan Pro
   #     fonts:
