--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.0.0
   rounded_expansion_tile: ^0.0.13
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
