--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^1.0.0
   rounded_expansion_tile: ^0.0.13
   fl_chart: ^0.63.0
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
