--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   rounded_expansion_tile: ^0.0.13
   fl_chart: ^0.63.0
   font_awesome_flutter: ^10.5.0
+  intl: ^0.18.1
+  datetime_picker_formfield_new: ^2.1.0
 
 dev_dependencies:
   flutter_test:
