--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.0.7
   flutter_spinkit: ^5.2.0
 
   hive: ^2.2.3
@@ -79,6 +79,7 @@ flutter:
     - assets/images/patient.jpg
     - assets/images/doctor.jpg
     - assets/images/donate.jpg
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
