--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   intl: ^0.18.1
   datetime_picker_formfield_new: ^2.1.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
