--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.18.1
   datetime_picker_formfield_new: ^2.1.0
   geolocator: ^9.0.2
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
