--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    compileSdkVersion 33
     namespace "com.bloodnepal.blood_nepal"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
