--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <meta-data
                 android:name="flutterEmbedding"
                 android:value="2"/>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value=""/>
     </application>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
