--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,11 +50,12 @@ dependencies:
   datetime_picker_formfield_new: ^2.1.0
   geolocator: ^9.0.2
   pin_code_fields: ^8.0.1
+  google_maps_flutter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^1.1.1
+  hive_generator: ^2.0.0
   build_runner: ^2.1.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
