--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 android:name="flutterEmbedding"
                 android:value="2"/>
         <meta-data android:name="com.google.android.geo.API_KEY"
-                   android:value=""/>
+                   android:value="AIzaSyBozYk5_cgJLRqv3jbmEH9are0b0gHVLlc"/>
     </application>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
